Fix pokemon cards so name is not showing outside its container and wrap works fine now

--- a/src/components/pokelist.css
+++ b/src/components/pokelist.css
@@ -2,9 +2,12 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	background-color: red;
 }
 
 .pokemon {
-	padding: 15px;
-	display: flex;
+	padding: 10px;
 }
