--- a/src/components/pokemon.css
+++ b/src/components/pokemon.css
@@ -8,7 +8,7 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	width: 100px;
+	width: 120px;
 }
 .card-pokemon__types {
 	padding: 0;
